--- a/DTFKhayer/wwwroot/DTFKhayer/viewmodels/CorporationPage.html
+++ b/DTFKhayer/wwwroot/DTFKhayer/viewmodels/CorporationPage.html
@@ -16,7 +16,10 @@
                 <div>
                     <div style="width:100%;clear:both">
                         <div style="float:left;width:200px">Name</div>
-                        <div style="float:left;width:200px">Number of Homes Sold</div>
+                        <div style="float: left; width: 200px">Number of Homes Sold</div>
+                        <div style="float: left; width: 200px">Total Commission</div>
+                        <div style="float: left; width: 200px">Total Average Commission</div>
+                        <div style="float:left;width:200px">Trend</div>
                     </div>
                     <div style="clear:both"></div>
                     <template is="dom-repeat" items="{{model.Franchises}}">
