--- a/DTFKhayer/wwwroot/DTFKhayer/viewmodels/FranchiseListPage.html
+++ b/DTFKhayer/wwwroot/DTFKhayer/viewmodels/FranchiseListPage.html
@@ -3,12 +3,17 @@
 <template>
     <template is="dom-bind">
         <div style="width:100%;clear:both">
-            <div style="float:left;width:200px">
-                <a href="/DTFKhayer/Franchise/{{model.Name}}">
-                {{model.Name}}&nbsp;
+            <div style="float: left; width: 200px">
+                <a href="/DTFKhayer/Franchise/{{model.Key}}">
+                    {{model.Name}}&nbsp;
                 </a>
             </div>
-            <div style="float:left;width:200px">0&nbsp;</div>
+            <div style="float: left; width: 200px">{{model.TotalHomeSold}}&nbsp;</div>
+            <div style="float: left; width: 200px">{{model.TotalCommission}}&nbsp;</div>
+            <div style="float: left; width: 200px">{{model.AverageCommission}}&nbsp;</div>
+            <div style="float: left; width: 200px">{{model.Trend}}&nbsp;</div>
+
+            <div style="float:left;width:200px">&nbsp;</div>
         </div>
     </template>
 </template>
