added corporate setup page

--- a/DTFKhayer/wwwroot/DTFKhayer/viewmodels/CorporationPage.html
+++ b/DTFKhayer/wwwroot/DTFKhayer/viewmodels/CorporationPage.html
@@ -1,17 +1,9 @@
 ﻿<link rel="import" href="/sys/polymer/polymer.html">
 <template>
     <template is="dom-bind">
-        <h2>Welcome</h2>
-        <h3>Create Main Corporation</h3>
-        <div>
-            <label>Corporation:</label>
-            <input value="{{model.Name$::input}}">
-        </div>
-        <button value="{{model.SaveCorporationTrigger$::click}}" onmousedown="++this.value">Create Corporation</button>
 
         <div class="franchise-container">
-            <div><b>Real Estate Estate Stars</b></div>
-            <div><b>Franchise Offices</b></div>
+            <div><b>Franchise Offices: {{model.Name}}</b></div>
             <div>
                 <div>
                     <div style="width:100%;clear:both">
