--- a/DTFKhayer/wwwroot/DTFKhayer/viewmodels/CorporationPage.html
+++ b/DTFKhayer/wwwroot/DTFKhayer/viewmodels/CorporationPage.html
@@ -1,23 +1,23 @@
 ﻿<link rel="import" href="/sys/polymer/polymer.html">
 <template>
     <template is="dom-bind">
-
         <div class="franchise-container">
-            <div><b>Franchise Offices: {{model.Name}}</b></div>
+            <div><b>Franchise Offices: {{model.Name}}</b>
+            </div>
             <div>
                 <div>
-                    <div style="width:100%;clear:both">
-                        <div style="float:left;width:200px">Name</div>
+                    <div style="width: 100%; clear: both">
+                        <div style="float: left; width: 200px">Name</div>
                         <div style="float: left; width: 200px">Number of Homes Sold</div>
                         <div style="float: left; width: 200px">Total Commission</div>
                         <div style="float: left; width: 200px">Total Average Commission</div>
-                        <div style="float:left;width:200px">Trend</div>
+                        <div style="float: left; width: 200px">Trend</div>
                     </div>
-                    <div style="clear:both"></div>
+                    <div style="clear: both"></div>
                     <template is="dom-repeat" items="{{model.Franchises}}">
                         <starcounter-include partial="{{item}}"></starcounter-include>
                     </template>
-                    <div style="clear:both"></div>
+                    <div style="clear: both"></div>
                 </div>
             </div>
             <div>
@@ -30,4 +30,5 @@
             </div>
         </div>
     </template>
+    <div style="height: 50px">&nbsp;</div>
 </template>
